# SmartOps-AI_Powered_IT_Service_Management

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: a2a-spec-validator.md  framework-compliance-reviewer.md
.claude/commands/: compliance-check.md  new-tactical-agent.md
configs/: capabilities.yaml
docs/: DI_AI_FRAMEWORK.md  PRD.md  architecture.md
infra/: .env.local.example  docker-compose.yaml
infra/keycloak/: realm-export.json
libs/a2a_client/: pyproject.toml
libs/a2a_client/src/a2a_client/: __init__.py  client.py
libs/a2a_server/: pyproject.toml
libs/a2a_server/src/a2a_server/: __init__.py  agent_card.py  app.py  auth.py  handlers.py  models.py  tasks.py
libs/config_loader/: pyproject.toml
libs/config_loader/src/config_loader/: __init__.py  loader.py
libs/di_framework_core/: pyproject.toml
libs/di_framework_core/src/di_framework_core/: __init__.py  audit.py  correlation.py  errors.py  models.py
libs/gateway_client/: pyproject.toml
libs/gateway_client/src/gateway_client/: __init__.py  client.py
libs/observability/: pyproject.toml
libs/observability/src/observability/: __init__.py  audit.py  health.py  telemetry.py
libs/oidc_client/: pyproject.toml
libs/oidc_client/src/oidc_client/: __init__.py  provider.py
libs/semantic_client/: pyproject.toml
libs/semantic_client/src/semantic_client/: __init__.py  client.py
scripts/: demo_closure.sh  demo_full_i2r.sh  demo_i2r_full.sh  demo_resolve.sh  demo_submit_incident.sh  demo_triage.sh  get_token.sh  seed_qdrant.py  smoketest.sh
services/i2r-primary-orchestrator/: Dockerfile  README.md  pyproject.toml
services/i2r-primary-orchestrator/configs/: agent.yaml
services/i2r-primary-orchestrator/docs/: eu-ai-act-risk-assessment.md
services/i2r-primary-orchestrator/src/i2r/: config.py  main.py  workflow.py
services/i2r-primary-orchestrator/tests/: test_workflow.py
services/incident-intake-agent/: Dockerfile  README.md  pyproject.toml
services/incident-intake-agent/configs/: agent.yaml
services/incident-intake-agent/docs/: eu-ai-act-risk-assessment.md
services/incident-intake-agent/src/incident_intake/: agent.py  config.py  main.py  models.py  oidc.py  tools.py  workflow.py
services/incident-intake-agent/tests/: conftest.py  test_agent_card.py  test_envelope.py  test_workflow.py
services/incident-intake-agent/tests/data/: sample_a2a_payload.json
services/priority-scorer/: Dockerfile  README.md  pyproject.toml
services/priority-scorer/configs/: agent.yaml
services/priority-scorer/docs/: eu-ai-act-risk-assessment.md
services/priority-scorer/src/priority_scorer/: agent.py  config.py  main.py  models.py  tools.py  workflow.py
services/priority-scorer/tests/: test_workflow.py
services/resolution-documenter-agent/: Dockerfile  README.md  pyproject.toml
services/resolution-documenter-agent/configs/: agent.yaml
services/resolution-documenter-agent/docs/: eu-ai-act-risk-assessment.md
services/resolution-documenter-agent/src/resolution_documenter/: agent.py  config.py  main.py  models.py  tools.py  workflow.py
services/resolution-documenter-agent/tests/: test_workflow.py
services/resolution-workflow-orchestrator/: Dockerfile  README.md  pyproject.toml
services/resolution-workflow-orchestrator/configs/: agent.yaml
services/resolution-workflow-orchestrator/docs/: eu-ai-act-risk-assessment.md
services/resolution-workflow-orchestrator/src/resolution/: config.py  main.py  workflow.py
services/resolution-workflow-orchestrator/tests/: test_runner.py  test_saga.py
services/strategic-business-context-agent/: Dockerfile  pyproject.toml
services/strategic-business-context-agent/src/sbca/: handlers.py  main.py  registry.py  rules.py
services/triage-workflow-orchestrator/: Dockerfile  README.md  pyproject.toml
services/triage-workflow-orchestrator/configs/: agent.yaml
services/triage-workflow-orchestrator/docs/: eu-ai-act-risk-assessment.md
services/triage-workflow-orchestrator/src/triage/: config.py  main.py  workflow.py
services/triage-workflow-orchestrator/tests/: test_runner.py
services/triage-workflow-orchestrator/tests/data/: sample_triage_payload.json
tools/clock-timer-service/: Dockerfile  pyproject.toml
tools/clock-timer-service/src/clock_timer_service/: main.py
tools/clustering-tool/: Dockerfile  pyproject.toml
tools/clustering-tool/src/clustering_tool/: main.py
tools/comparison-tool/: Dockerfile  pyproject.toml
tools/comparison-tool/src/comparison_tool/: main.py
tools/configuration-manager/: Dockerfile  pyproject.toml
tools/configuration-manager/src/configuration_manager/: main.py
tools/document-formatter/: Dockerfile  pyproject.toml
tools/document-formatter/src/document_formatter/: main.py
tools/email-parser/: Dockerfile  pyproject.toml
tools/email-parser/data/: sample_emails.json
tools/email-parser/src/email_parser/: main.py
tools/email-sender/: Dockerfile  pyproject.toml
tools/email-sender/src/email_sender/: main.py
tools/embedding-search-tool/: Dockerfile  pyproject.toml
tools/embedding-search-tool/src/embedding_search_tool/: main.py
tools/form-normaliser/: Dockerfile  pyproject.toml
tools/form-normaliser/data/: sample_forms.json
tools/form-normaliser/src/form_normaliser/: main.py
tools/health-check-runner/: Dockerfile  pyproject.toml
tools/health-check-runner/data/: checks.yaml
tools/health-check-runner/src/health_check_runner/: main.py
tools/historical-pattern-matcher/: Dockerfile  pyproject.toml
tools/historical-pattern-matcher/src/historical_pattern_matcher/: main.py
tools/impact-analyser/: Dockerfile  pyproject.toml
tools/impact-analyser/src/impact_analyser/: main.py
tools/incident-history-connector/: Dockerfile  pyproject.toml
tools/incident-history-connector/data/: incidents.yaml
tools/incident-history-connector/src/incident_history_connector/: main.py
tools/knowledge-base-connector/: Dockerfile  pyproject.toml
tools/knowledge-base-connector/data/: articles.yaml
tools/knowledge-base-connector/src/knowledge_base_connector/: main.py
(+216 files in other folders)
