[project]
name = "a2a-server"
version = "0.1.0"
description = "Spec-native Google A2A protocol server (no third-party wrappers)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.9",
  "sse-starlette>=2.1",
  "pyjwt[crypto]>=2.9",
  "httpx>=0.27",
  "uvicorn>=0.32",
  "di-framework-core",
  "observability",
]

[tool.uv.sources]
di-framework-core = { workspace = true }
observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_server"]
