[project]
name = "config-loader"
version = "0.1.0"
description = "YAML + env-interpolated, pydantic-validated config loader for DI AI Framework services"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "di-framework-core",
]

[tool.uv.sources]
di-framework-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/config_loader"]
