[project]
name = "di-framework-core"
version = "0.1.0"
description = "Shared types, errors, correlation IDs, audit classification for the DI AI Framework"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/di_framework_core"]
