[project]
name = "gateway-client"
version = "0.1.0"
description = "OpenAI-compatible client for the LiteLLM AI Gateway. All LLM/embedding calls in DI agents route here."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.9",
  "di-framework-core",
]

[tool.uv.sources]
di-framework-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway_client"]
