[project]
name = "observability"
version = "0.1.0"
description = "OTEL setup, CAT/PST classification, health endpoints for DI AI Framework agents"
requires-python = ">=3.12"
dependencies = [
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "fastapi>=0.115",
  "httpx>=0.27",
  "di-framework-core",
]

[tool.uv.sources]
di-framework-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observability"]
