[project]
name = "oidc-client"
version = "0.1.0"
description = "Shared OIDC client-credentials token provider for DI AI Framework agents"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "di-framework-core",
]

[tool.uv.sources]
di-framework-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oidc_client"]
