[project]
name = "semantic-client"
version = "0.1.0"
description = "A2A client to the Strategic Business Context Agent (SBCA). Rule queries + capability registry."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "di-framework-core",
  "a2a-client",
]

[tool.uv.sources]
di-framework-core = { workspace = true }
a2a-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_client"]
