[project]
name = "incident-intake-agent"
version = "0.1.0"
description = "Tactical agent — extract structured incident data from multi-channel inputs (Anthropic pattern: prompt chaining)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "httpx>=0.27",
  "agent-framework>=0.1.0",
  "qdrant-client>=1.12",
  "di-framework-core",
  "config-loader",
  "observability",
  "a2a-server",
  "gateway-client",
  "semantic-client",
]

[tool.uv.sources]
di-framework-core = { workspace = true }
config-loader = { workspace = true }
observability = { workspace = true }
a2a-server = { workspace = true }
gateway-client = { workspace = true }
semantic-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/incident_intake"]
