[project]
name = "resolution-workflow-orchestrator"
version = "0.1.0"
description = "Strategic sub-process orchestrator — chains tactical agents for incident resolution (Diagnostic + Knowledge Search; +Fix/Verify in Stage 4b). Saga compensation on verification failure (4b)."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "httpx>=0.27",
  "di-framework-core",
  "config-loader",
  "observability",
  "a2a-server",
  "a2a-client",
  "semantic-client",
  "oidc-client",
]

[tool.uv.sources]
di-framework-core = { workspace = true }
config-loader = { workspace = true }
observability = { workspace = true }
a2a-server = { workspace = true }
a2a-client = { workspace = true }
semantic-client = { workspace = true }
oidc-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resolution"]
