[project]
name = "strategic-business-context-agent"
version = "0.1.0"
description = "SBCA — semantic plane (business rules) + capability registry. Phase 1 stub."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pyyaml>=6.0",
  "di-framework-core",
  "config-loader",
  "observability",
  "a2a-server",
]

[tool.uv.sources]
di-framework-core = { workspace = true }
config-loader = { workspace = true }
observability = { workspace = true }
a2a-server = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sbca"]
