[project]
name = "tool-clock-timer-service"
version = "0.1.0"
description = "Business-hours-aware elapsed-minute calculator"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "pydantic>=2.9", "tzdata>=2024.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clock_timer_service"]
