[project]
name = "tool-comparison-tool"
version = "0.1.0"
description = "Compares pre/post metric snapshots, returns deltas + verdict"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comparison_tool"]
