[project]
name = "tool-configuration-manager"
version = "0.1.0"
description = "Snapshot/restore for configuration state. Phase 1: in-memory JSON store."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/configuration_manager"]
