[project]
name = "tool-document-formatter"
version = "0.1.0"
description = "Renders structured resolution notes to markdown using named templates"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "pydantic>=2.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_formatter"]
