[project]
name = "tool-email-sender"
version = "0.1.0"
description = "Synthetic SMTP/SendGrid dispatcher — records sends to an in-memory log for inspection"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "pydantic>=2.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_sender"]
