[project]
name = "tool-embedding-search-tool"
version = "0.1.0"
description = "Qdrant-backed vector search over the knowledge_articles collection"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "qdrant-client>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embedding_search_tool"]
