[project]
name = "tool-form-normaliser"
version = "0.1.0"
description = "Form normaliser sidecar — maps various web-form schemas to canonical incident input"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/form_normaliser"]
