[project]
name = "tool-health-check-runner"
version = "0.1.0"
description = "Runs HTTP/TCP-style health checks against affected services (synthetic)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/health_check_runner"]
