[project]
name = "tool-historical-pattern-matcher"
version = "0.1.0"
description = "Historical pattern matcher sidecar — finds past incidents whose classification suggests a label for a new one"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "qdrant-client>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/historical_pattern_matcher"]
