[project]
name = "tool-impact-analyser"
version = "0.1.0"
description = "Computes a business-impact score from incident features (synthetic weights for Phase 1)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/impact_analyser"]
