[project]
name = "tool-incident-history-connector"
version = "0.1.0"
description = "Queries past incidents by metadata filters (synthetic Phase 1)"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "pydantic>=2.9", "pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/incident_history_connector"]
