[project]
name = "tool-knowledge-base-connector"
version = "0.1.0"
description = "Synthetic KB connector — keyword search over a tiny corpus of articles"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_base_connector"]
